@@ -32,6 +32,11 @@ class CDbCacheDependency extends CCacheDependency
 	 * Note, the SQL statement should return back a single value.
 	 */
 	public $sql;
+	/**
+	 * @var array parameters (name=>value) to be bound to the SQL statement specified by {@link sql}.
+	 * @since 1.1.4
+	 */
+	public $params;
 
 	private $_db;
 
@@ -62,7 +67,15 @@ class CDbCacheDependency extends CCacheDependency
 	protected function generateDependentData()
 	{
 		if($this->sql!==null)
-			return $this->getDbConnection()->createCommand($this->sql)->queryScalar();
+		{
+			$command=$this->getDbConnection()->createCommand($this->sql);
+			if(is_array($this->params))
+			{
+				foreach($this->params as $name=>$value)
+					$command->bindValue($name,$value);
+			}
+			return $command->queryRow();
+		}
 		else
 			throw new CException(Yii::t('yii','CDbCacheDependency.sql cannot be empty.'));
 	}
